# quireforge

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.github/: actionlint.yaml
.github/workflows/: linux-release.yml  repository-checks.yml
apps/desktop/: .prettierignore  README.md  package.json
apps/desktop/src/: App.tsx  (+14 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: contract.rs  lib.rs
apps/desktop/src-tauri/src/attachment/: mod.rs
apps/desktop/src-tauri/src/codex/: app_server.rs  integration.rs  integration_control.rs  integration_service.rs  mod.rs
apps/desktop/src-tauri/src/codex/auth/: mod.rs
apps/desktop/src-tauri/src/codex/conversation/: lifecycle.rs  mod.rs  presentation.rs  types.rs
apps/desktop/src-tauri/src/git/: mutation.rs
apps/desktop/src-tauri/src/preview/: mod.rs  types.rs
apps/desktop/src-tauri/src/project/: mod.rs  storage.rs
apps/desktop/src-tauri/src/worktree/: mod.rs  types.rs
apps/website/: package.json
docs/: ARCHITECTURE.md  BUILDING.md  CLOUDFLARE-PAGES-CAPABILITY-AUDIT.md  CLOUDFLARE-PAGES-DEPLOYMENT.md  CODEX-INTEGRATION.md  COMPATIBILITY.md  FEATURE-PARITY.md  GITHUB-PAGES.md  LOCAL-BUILD-PERFORMANCE.md  MILESTONE-FORECASTS.md  MILESTONE_21B_RELEASE_READINESS.md  MILESTONE_TIME_LEDGER.md  ROADMAP.md  TESTING.md  THREAT-MODEL.md  WEBSITE.md
docs/DECISIONS/: 0002-directory-identity.md  0003-permanent-quireforge-identity.md  0006-cloudflare-pages-production-hosting.md  0007-quireforge-metadata-sqlite.md  (+6 more)
scripts/: generate_codex_schema_fixtures.py  validate_repository.py
(+28 files in other folders)
