[package]
name = "quireforge"
version = "0.0.0"
description = "An unofficial native Linux workspace for Codex"
authors = ["QuireForge contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/codeframe78/quireforge"
rust-version = "1.88"

[lib]
name = "quireforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }

[dev-dependencies]
serde_json = "1.0.149"
